Drop a good deal of animation if on mobile. Fixes #20. May want to not be so agressive with tablets maybe?

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1525,6 +1525,9 @@ Major modifications by Tim DuBois. Any content not falling under CCA 3.0 is rele
 				font-size: 12pt;
 			}
 
+         .chromatic-waiting {
+            left: 0;
+         }
 		/* List */
 
 			ul {
